# GEAR

./: .gitignore  CMakeLists.txt  CMakeSettings.json  about.md  changelog.md  mod.json
.github/workflows/: build.yml
resources/: default_imgui.ini
src/: main.cpp
src/classes/: GearControls.hpp  GearEditorUI.cpp  GearEditorUI.hpp
src/features/: AutoSave.cpp  CustomGridResize.cpp  Debug.cpp  FixBPMTriggerCrash.cpp  Hovering.cpp  Hovering.hpp  MoreKeybinds.cpp  ObjectListConfig.cpp  SelectFilter.cpp  SelectFilter.hpp  SelectedObjectInfo.cpp  SelectedObjectInfo.hpp  Selection.cpp  Selection.hpp  ZoomToScroll.cpp  ZoomToScroll.hpp
src/helpers/: OpenGLStateHelper.h  ScreenRenderer.h
src/includes/: AdvancedUndoRedo.cpp  AdvancedUndoRedo.hpp  CopyEGMState.cpp  CopyEGMState.hpp  CustomImGuiWidgets.cpp  CustomImGuiWidgets.hpp  GearCopyPasteIcons.hpp  GearIcons.hpp  ObjectCategories.cpp  ObjectCategories.hpp  ObjectProperty.hpp  TweenFunctions.cpp  TweenFunctions.hpp  myUtils.cpp  myUtils.hpp  razoomUtils.cpp  razoomUtils.hpp
src/modules/: ActionHistoryModule.cpp  ActionHistoryModule.hpp  CameraSettings.cpp  CameraSettings.hpp  ContextMenuModule.cpp  ContextMenuModule.hpp  DebugModule.cpp  DebugModule.hpp  EditColorModule.cpp  EditColorModule.hpp  EditGroupModule.cpp  EditGroupModule.hpp  EditObjectModule.cpp  EditObjectModule.hpp  EditorUtilsModule.cpp  EditorUtilsModule.hpp  FooterModule.cpp  FooterModule.hpp  GameWindowModule.cpp  GameWindowModule.hpp  GlobalDockingView.cpp  GlobalDockingView.hpp  LayerModule.cpp  LayerModule.hpp  ObjectCategories.cpp  ObjectCategories.hpp  ObjectListModule.cpp  ObjectListModule.hpp  ObjectsSets.hpp  PropertiesModule.cpp  PropertiesModule.hpp  SelectFilterModule.cpp  SelectFilterModule.hpp  SelectModule.cpp  SelectModule.hpp  SettingsModule.cpp  SettingsModule.hpp  ToolsModule.cpp  ToolsModule.hpp  TransformObjectModule.cpp  (+5 more)
src/modules/EditObject/: AnimatedObjects.cpp  AnimatedObjects.hpp  AreaTriggers.cpp  AreaTriggers.hpp  CameraTriggers.cpp  CameraTriggers.hpp  CollectibleObjects.cpp  CollectibleObjects.hpp  CollisionTriggers.cpp  CollisionTriggers.hpp  CountAndItemTriggers.cpp  CountAndItemTriggers.hpp  EditObjectModule.cpp  EditObjectModule.hpp  EditObjectUIComponents.cpp  EditObjectUIComponents.hpp  EnterTriggers.cpp  EnterTriggers.hpp  FollowTriggers.cpp  FollowTriggers.hpp  GroundTriggers.cpp  GroundTriggers.hpp  OtherObjects.cpp  OtherObjects.hpp  ShaderTriggers.cpp  ShaderTriggers.hpp  SongTriggers.cpp  SongTriggers.hpp  StandardTriggers.cpp  StandardTriggers.hpp  TimeAndKeyframeTriggers.cpp  TimeAndKeyframeTriggers.hpp
